[package]
name = "json-nom-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version = "7", features = ["default"]}
lazy_static = "1.4"

[profile.bench]
debug = true
lto = true
codegen-units = 1

[workspace]
members = [".", "benchmarks/"]