[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5"
jemallocator = "0.5"
json-nom-parser = { path = "../" }

[lib]
bench = false

[[bench]]
name = "json"
path = "benches/json.rs"
harness = false